--- a/deploy/sample-backup-configs/sample_config_build_recipes.yaml
+++ b/deploy/sample-backup-configs/sample_config_build_recipes.yaml
@@ -106,6 +106,21 @@ firesim_cva6_singlecore_no_nic_l2_llc4mb_ddr3:
     metasim_customruntimeconfig: null
     bit_builder_recipe: bit-builder-recipes/f1.yaml
 
+# Single-core, ARA-based recipes
+firesim_ara_singlecore_no_nic_l2_llc4mb_ddr3:
+    PLATFORM: f1
+    TARGET_PROJECT: firesim
+    DESIGN: FireSim
+    TARGET_CONFIG: DDR3FRFCFSLLC4MB_WithDefaultFireSimBridges_WithFireSimConfigTweaks_chipyard.ARAConfigOpti
+    PLATFORM_CONFIG: BaseF1Config
+    deploy_quintuplet: null
+    platform_config_args:
+        fpga_frequency: 80
+        build_strategy: TIMING
+    post_build_hook: null
+    metasim_customruntimeconfig: null
+    bit_builder_recipe: bit-builder-recipes/f1.yaml
+
 # Single-core, Rocket-based recipes with Gemmini
 firesim_rocket_singlecore_gemmini_no_nic_l2_llc4mb_ddr3:
     PLATFORM: f1
